Sat Jun 06 11:02:50 GMT 2015  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Use C++11 auto and container
	  iteration for cleaner code.

Fri Jun 05 12:08:02 GMT 2015  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omenquireinternal.h,
	  backends/remote/remote-database.cc,backends/remote/remote-database.h,
	  include/xapian/matchspy.h,matcher/,net/remoteserver.cc,
	  tests/api_none.cc: Add support for optional reference counting of
	  MatchSpy objects.

Fri Jun 05 02:55:54 GMT 2015  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.h: Correct doxygen comment for
	  internal method.

Thu Jun 04 12:44:00 GMT 2015  Olly Betts <olly@survex.com>

	* examples/quest.cc: Prefer pre-increment ++.

Thu Jun 04 12:42:49 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_compact.cc,tests/api_posdb.cc: Remove unused variables.

Thu Jun 04 12:42:04 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Fix compilation in case where S_ISSOCK() isn't
	  defined.

Thu Jun 04 12:41:31 GMT 2015  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Remove redundant assignment.

Thu Jun 04 12:40:52 GMT 2015  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Remove extra "break;".

Thu Jun 04 12:39:51 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Remove bogus extra "Query::" qualifier from
	  fake Query constructor prototypes provided for SWIG.

Thu Jun 04 12:38:36 GMT 2015  Olly Betts <olly@survex.com>

	* api/documentvaluelist.h,api/leafpostlist.h,api/matchspy.cc,
	  include/xapian/,net/length.cc: Mark constructors taking a
	  single argument as "explicit" to avoid unwanted implicit
	  conversions.

Mon Jun 01 13:11:02 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS.SKELETON: Remove section for "flint backend" from template.

Mon Jun 01 13:09:55 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.3.3.

Mon May 25 04:33:15 GMT 2015  Olly Betts <olly@survex.com>
